# chat_alma

./: .bashrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
data/: conversations.csv  memories.csv
data/chunks/: chunk_001_en.md  chunk_003_en.md  chunk_004_en.md  chunk_005_en.md  chunk_006_en.md  chunk_007_en.md  chunk_008_en.md  chunk_009_en.md  chunk_010_en.md  chunk_011_en.md  chunk_012_en.md  chunk_013_en.md  chunk_014_en.md  chunk_015_en.md  chunk_016_en.md  chunk_017_en.md  chunk_018_en.md  chunk_019_en.md  chunk_020_en.md
db/: alma.db
doc/: alma.md  prompt_refactor_memory.py.md
docs/: alma.md  alma_agent.md  answer_alma_agent.md  auditory_from_deepseek.md  changelog.md
meta/: schema.sql  schema_swap.sql
src/alma/: __init__.py  __main__.py  alma.py  alma_agent.py  main.py  memory.py  memory_optimizer.py
src/alma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/alma/commands/: agent_growth.py  code_review.py  memory_ops.py
src/alma/core/: __init__.py  agent.py  alma.py  chat.py  config.py  database.py  embedding.py  llm_client.py  memory.py  memory_manager.py  rag.py
src/alma/scripts/: __init__.py  embedding_generator.py
src/alma/utils/: inject_memories.sh
src/db/: alma.db
utils/: inject_memories.sh
