[project]
name = "alma"
version = "1.0.0"
description = "Alma RAG System with DeepSeek API"
authors = [
    {name = "Arca", email = "your-email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "numpy>=1.24.0",
]

[project.scripts]
alma = "alma.__main__:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"