[project]
name = "alma-agent"
version = "0.3.0"
description = "Alma Agent - Sistema Autónomo con Memoria"
authors = [
    {name = "Tu Nombre", email = "tu@email.com"},
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "psycopg2-binary>=2.9.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
alma = "alma.main:cli"

# Configuración para paquetes en src/
[tool.setuptools]
packages = ["alma"]

[tool.setuptools.package-dir]
alma = "src/alma"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"